updated division of labour

--- a/main.tex
+++ b/main.tex
@@ -1222,6 +1222,23 @@ The chosen innovative feature to implement is the AI-powered car recommendation 
 Include a Division of Labour sheet which indicates the contributions of each team member. This sheet must be signed by all team members.
 % End Section
 
+\subsection{Ahsan Muzammil}
+
+\begin{itemize}
+    \item \textbf{Section 2.4:} Wrote the constraints.
+    \item \textbf{Section 3:} Created the Use Case Diagram.
+    \item \textbf{Section 4:} Created Business Event 4 - User requests depreciation curve for a previous car deal report.
+    \item \textbf{Section 5.1:} Look and Feel Non-functional Requirements.
+    \item \textbf{Section 5.3:} Performance Requirements.
+    \item \textbf{Section 6:} Contributed to the innovative feature section.
+    \item Reformatted my sections from google docs to LaTeX and added my references
+	\begin{center}
+        \includegraphics[scale=0.1]{Images/ahsan.jpeg}
+    \end{center}
+\end{itemize}
+
+
+
 %\newpage
 %\section*{IMPORTANT NOTES}
 %\begin{itemize}
